2006-08-03  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/frontend/gtk/commit.py: change TextView font to Monospace
    * olive/frontend/gtk/diff.py: implemented diff window
    * olive.glade: added icons to windows and the about box, and the skeleton
      of the diff window was designed

2006-08-02  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * cmenu.ui: context menu UIManager description added
    * setup.py: install cmenu.ui to the appropriate place
    * olive/frontend/gtk/menu.py: implement the context menus
    * olive/frontend/gtk/__init__.py: added button_press_event for file list
    * olive/frontend/gtk/handler.py: handling that even (show popup menu)

2006-08-01  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/frontend/gtk/push.py: now the number of pushed revisions gets
      displayed (Fixed: #54698)
    * olive/backend/info.py: added is_checkout()
    * olive/frontend/gtk/commit.py: local commit checkbox shows up only if the
      current directory is a checkout
    * olive/backend/fileops.py: upgraded to new API (compare_trees deprecated)
    * many files: the cursor changes to a watch when performing time consuming
      operations (Fixed: #54015)

2006-07-31  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * Back from holiday.
    * olive.glade: separated branch and checkout dialogs (Fixed: #54019)
    * olive/frontend/gtk/checkout.py: file added respectively
    * olive/frontend/gtk/branch.py: removed checkout options
    * olive/frontend/gtk/handler.py: modified handler names + added checkout
    * olive/frontend/gtk/push.py: window gets properly resized (Fixed: #54676)

2006-07-25  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive-gtk: display error if python 2.4 not available (Mario Đanić)
      (Fixed: #54014)
    * olive-gtk: display error if pygtk2 (and glade) not available (Mario Đanić)
      (Fixed: #54013)

2006-07-24  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
