@@ -1588,10 +1588,29 @@
       </child>
 
       <child>
+	<widget class="GtkEntry" id="entry_push_stored">
+	  <property name="visible">True</property>
+	  <property name="can_focus">True</property>
+	  <property name="editable">False</property>
+	  <property name="visibility">True</property>
+	  <property name="max_length">0</property>
+	  <property name="text" translatable="yes">(no location known)</property>
+	  <property name="has_frame">True</property>
+	  <property name="invisible_char">●</property>
+	  <property name="activates_default">False</property>
+	</widget>
+	<packing>
+	  <property name="padding">0</property>
+	  <property name="expand">False</property>
+	  <property name="fill">False</property>
+	</packing>
+      </child>
+
+      <child>
 	<widget class="GtkRadioButton" id="radiobutton_push_specific">
 	  <property name="visible">True</property>
 	  <property name="can_focus">True</property>
-	  <property name="label" translatable="yes">Push to specific _location:</property>
+	  <property name="label" translatable="yes">Push to specific _location</property>
 	  <property name="use_underline">True</property>
 	  <property name="relief">GTK_RELIEF_NORMAL</property>
 	  <property name="focus_on_click">True</property>
@@ -1645,9 +1664,9 @@
       </child>
 
       <child>
-	<widget class="GtkCheckButton" id="checkbutton_push_overwrite">
+	<widget class="GtkCheckButton" id="checkbutton_push_create">
 	  <property name="can_focus">True</property>
-	  <property name="label" translatable="yes">_Overwrite target if diverged</property>
+	  <property name="label" translatable="yes">_Create the path leading up to the location</property>
 	  <property name="use_underline">True</property>
 	  <property name="relief">GTK_RELIEF_NORMAL</property>
 	  <property name="focus_on_click">True</property>
@@ -1663,9 +1682,10 @@
       </child>
 
       <child>
-	<widget class="GtkCheckButton" id="checkbutton_push_create">
+	<widget class="GtkCheckButton" id="checkbutton_push_overwrite">
+	  <property name="visible">True</property>
 	  <property name="can_focus">True</property>
-	  <property name="label" translatable="yes">_Create the path leading up to the location</property>
+	  <property name="label" translatable="yes">_Overwrite target if diverged</property>
 	  <property name="use_underline">True</property>
 	  <property name="relief">GTK_RELIEF_NORMAL</property>
 	  <property name="focus_on_click">True</property>
